--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,6 @@ matrix:
       compiler:
         - gcc
       script:  
-        - gcc -o Chrismustree Chrismustree.c 
-        - ./Chrismustree
-        - gcc -o traingle triangle.c
-        - ./traingle
-        - gcc -o parellel parellel.c
-        - ./parellel
-        - gcc -o pattern pattern.c
-        - ./pattern
+        - gcc -o parking parking.c 
+        - ./parking
+        
